# C5O-Kinetics

./: .gitignore  README.md  notes.txt  pyproject.toml  slurm-40352613.out  slurm-40352618.out  slurm-40352622.out  slurm-40352627.out  slurm-40411488.out  slurm-40411493.out  slurm-40454643.out  slurm-40454653.out  test.ipynb
.scripts/: dump.sh  energy.py  extract.sh  find_mode.sh  find_opt.sh  find_scan.sh  read_energy.sh  refresh.sh  run_opt.sh  run_scan.sh  submit.sh  test.sh  update_db.py
calc/1/: calc.inp  init.xyz  submit.sh
calc/1/40453302/: calc.engrad  calc.finalensemble.globaliter.0.xyz  calc.finalensemble.globaliter.1.xyz  calc.finalensemble.globaliter.2.xyz  calc.gbw  calc.globalminimum.xyz  calc.opt  calc.property.txt  calc.xtbrestart  calc.xyz  calc_trj.xyz  submit.sh
calc/2/: calc.inp  init.xyz  submit.sh
calc/2/40454496/: calc.engrad  calc.finalensemble.globaliter.0.xyz  calc.finalensemble.globaliter.1.xyz  calc.finalensemble.xyz  calc.gbw  calc.globalminimum.xyz  calc.inp  calc.opt  calc.property.txt  calc.xtbrestart  calc.xyz  calc_trj.xyz
calc/3/: init.xyz
calc/4/: init.xyz  slurm-40454941.out  submit.sh
calc/C/opt/: guess.xyz  run_opt.sh
calc/CdblC/opt/: guess.xyz  opt.bibtex  opt.densities  opt.densitiesinfo  opt.engrad  opt.gbw  opt.inp  opt.opt  opt.property.txt  opt.xyz  opt_atom6.densitiesinfo  opt_atom6.out  opt_atom6.property.txt  opt_trj.xyz  run_opt.sh  slurm-40124125.out
calc/CdblCO_CH2_/: guess.xyz  opt.inp
calc/R5/Start/: CH2CCC1CO1.xyz  opt.inp  sub.sh
calc/_CH2_C1CO1/: guess.xyz  opt.xyz  opt_trj.xyz  run_opt.sh
calc/_CH2_CCC1CO1/: guess.xyz  opt.densities  opt.densitiesinfo  opt.engrad  opt.gbw  opt.inp  opt.opt  opt.property.txt  opt_atom6.densitiesinfo  opt_atom6.out  opt_atom6.property.txt  opt_atom8.densitiesinfo  opt_atom8.out  opt_atom8.property.txt  opt_trj.xyz  run_opt.sh
calc/_CH2_CCC1CO1_trans_B/: run_trans.sh  scan.001.gbw  scan.002.gbw  scan.004.xyz  scan.006.gbw  scan.008.xyz  scan.012.gbw  scan.allxyz  scan.densities  scan.densitiesinfo  scan.inp  scan.property.txt  scan_atom6.out  scan_atom6.property.txt  scan_atom8.densitiesinfo  scan_atom8.property.txt  slurm-40123021.out
db/: data.db  data.dump  data_bu.db  data_bu2.db  data_bu3.db  frequencies.db  init.sql  init_db.sql  init_frequencies.sql  log_calc.sh  log_freq.sh  results.db  test.db  test.sql
notebooks/: beta_cleavage.ipynb  gui.ipynb  interface.ipynb  neb_ts.ipynb  opt.py  optimization.ipynb  path.ipynb  test.py  visualize.ipynb  workflow.ipynb
notebooks/protomol/orca/: batch.sh.template  batch_scan_opt.sh.template  orca.inp.template  slurm.sh.template  writing.py
notebooks/protomol/rd/: mol.py
notebooks/protomol/util/: backend.py  ip.py  ref.py  render.py  update_db.py
notebooks/test/: XTB.inp
notebooks/utils/: io.py  optimize.py  py3.py  resources.py  smi.py  trans.py  updates.py  visualize.py  widgets.py  writing.py
references/_CH2_CCC1CO1_trans_B/: opt.xyz  scan.003.xyz  scan.005.xyz  scan.006.xyz  scan.009.xyz  scan.010.xyz  scan.012.xyz  scan.013.xyz  scan.inp  scan_trj.xyz
references/_CH2_CCC1CO1_trans_B/run_opt/: scan.001.xyz  scan.002.xyz  scan.003.gbw  scan.004.gbw  scan.005.gbw  scan.007.gbw  scan.007.xyz  scan.008.gbw  scan.009.gbw  scan.010.gbw  scan.011.gbw  scan.011.xyz  scan.013.gbw  scan.014.gbw  scan.014.xyz  scan.opt  scan_atom6.densitiesinfo  scan_atom8.out
references/_CH2_CCC1CO1_trans_B/run_scan/: scan.001.gbw  scan.001.xyz  scan.002.gbw  scan.002.xyz  scan.003.gbw  scan.003.xyz  scan.004.gbw  scan.004.xyz  scan.005.gbw  scan.005.xyz  scan.006.gbw  scan.006.xyz  scan.007.gbw  scan.007.xyz  scan.008.gbw  scan.008.xyz  scan.009.gbw  scan.009.xyz  scan.010.gbw  scan.010.xyz  scan.011.gbw  scan.011.xyz  scan.012.gbw  scan.012.xyz  scan.013.gbw  scan.013.xyz  scan.014.gbw  scan.014.xyz  scan.allxyz  scan.densities  scan.densitiesinfo  scan.inp  scan.opt  scan.property.txt  (+7 more)
src/protomol/: __init__.py  calc.property.txt  opt.py  test.ipynb
src/protopilot/: calculate_potential.py  gui.py  orca.py
(+53 files in other folders)
