[project]
authors = [{name = "Troy Smith", email = "Troy.Smith@uga.edu"}]
dependencies = []
name = "protopilot"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
protopilot = { path = ".", editable = true }

[tool.pixi.dependencies]
ipykernel = ">=6.30.1,<7"
rdkit = ">=2025.3.5,<2026"
py3dmol = ">=2.5.2,<3"
click = ">=8.2.1,<9"
numpy = ">=2.3.2,<3"
altair = ">=5.5.0,<6"
pandas = ">=2.3.1,<3"
pyparsing = ">=3.2.3,<4"
networkx = ">=3.5,<4"
autode = ">=1.4.5,<2"
libgfortran = "14.*"
xtb = "<6.7"
ipywidgets = ">=8.1.7,<9"
jq = ">=1.8.1,<2"
pyyaml = ">=6.0.2,<7"
sqlite = "*"
pint = ">=0.25,<0.26"
pydantic = ">=2.11.7,<3"

[tool.pixi.tasks.dump]
cmd = "bash .scripts/dump.sh"

[tool.pixi.tasks.refresh]
cmd = "bash .scripts/refresh.sh"

[tool.ruff]
line-length = 88

[tool.ruff.format]
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.isort]
section-order = ["third-party", "standard-library", "local-folder"]
force-sort-within-sections = true
lines-between-types = 1
